add section what-to-do

--- a/Home-11/index.html
+++ b/Home-11/index.html
@@ -95,6 +95,72 @@
         </div>
     </div>
 </section>
+<section class="what-we-do">
+    <div class="container">
+        <div class="section-header">
+            <h2 class="text-center">What we do?</h2>
+        </div>
+        <div class="row justify-content-between">
+            <div class="col-md-6 wrapper">
+                <div class="what-we-do__item d-flex">
+                    <div class="what-we-do__icon">
+                        <img src="assets/img/what-we-do/web-design.png" alt="web design">
+                    </div>
+                    <div class="what-we-do__content">
+                        <h3 class="what-we-do__title">Web design</h3>
+                        <p class="what-we-do__description">Aliquam sagittis neque in lectus semper, nec elementum arcu
+                            scelerisque.
+                            Curabitur ullamcorper auctor mauris, placerat fermentum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 wrapper">
+                <div class="what-we-do__item d-flex">
+                    <div class="what-we-do__icon">
+                        <img src="assets/img/what-we-do/web-applications.png" alt="web applications">
+                    </div>
+                    <div class="what-we-do__content">
+                        <h3 class="what-we-do__title">Web Applications</h3>
+                        <p class="what-we-do__description">Aliquam sagittis neque in lectus semper, nec elementum arcu
+                            scelerisque.
+                            Curabitur ullamcorper auctor mauris, placerat fermentum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 wrapper">
+                <div class="what-we-do__item d-flex">
+                    <div class="what-we-do__icon">
+                        <img src="assets/img/what-we-do/digital-painting.png" alt="digital painting">
+                    </div>
+                    <div class="what-we-do__content">
+                        <h3 class="what-we-do__title">Digital paiting</h3>
+                        <p class="what-we-do__description">Aliquam sagittis neque in lectus semper, nec elementum arcu
+                            scelerisque.
+                            Curabitur ullamcorper auctor mauris, placerat fermentum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 wrapper">
+                <div class="what-we-do__item d-flex">
+                    <div class="what-we-do__icon">
+                        <img src="assets/img/what-we-do/desktop-applications.png" alt="desktop applications">
+                    </div>
+                    <div class="what-we-do__content">
+                        <h3 class="what-we-do__title">Desktop Applications</h3>
+                        <p class="what-we-do__description">Aliquam sagittis neque in lectus semper, nec elementum arcu
+                            scelerisque.
+                            Curabitur ullamcorper auctor mauris, placerat fermentum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <a class="main-btn" href="#">Ask for price</a>
+        </div>
+    </div>
+</section>
 
 <script src="assets/js/libs.js"></script>
 <script src="assets/js/main.js"></script>
