add section about us

--- a/Home-11/index.html
+++ b/Home-11/index.html
@@ -161,6 +161,46 @@
         </div>
     </div>
 </section>
+<section class="about">
+    <div class="container">
+        <div class="section-header text-center">
+            <h2 class="light">About us!</h2>
+            <p class="about__description">Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque.
+                Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
+        </div>
+        <div class="row about-items">
+            <div class="col-md-6 col-lg-3">
+                <div class="about-item text-center">
+                    <img src="assets/img/about-us/member-one.png" alt="John Doe">
+                    <h3 class="about-item__name">John Doe</h3>
+                    <p class="about__description">Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="about-item text-center">
+                    <img src="assets/img/about-us/member-two.png" alt="John Doe">
+                    <h3 class="about-item__name">John Doe</h3>
+                    <p class="about__description">Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="about-item text-center">
+                    <img src="assets/img/about-us/member-three.png" alt="John Doe">
+                    <h3 class="about-item__name">John Doe</h3>
+                    <p class="about__description">Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="about-item text-center">
+                    <img src="assets/img/about-us/member-four.png" alt="John Doe">
+                    <h3 class="about-item__name">John Doe</h3>
+                    <p class="about__description">Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
+                </div>
+            </div>
+            <a class="main-btn" href="#">Watch more</a>
+        </div>
+    </div>
+</section>
 
 <script src="assets/js/libs.js"></script>
 <script src="assets/js/main.js"></script>
