--- a/Home-11/index.html
+++ b/Home-11/index.html
@@ -201,6 +201,25 @@
         </div>
     </div>
 </section>
+<section class="location-map">
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387193.3059445135!2d-74.25986613799748!3d40.69714941774136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2z0J3RjNGOLdCZ0L7RgNC6LCDQodCo0JA!5e0!3m2!1sru!2sua!4v1545407628631"
+                allowfullscreen>
+        </iframe>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="footer-content">
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                    <p>Try awsome tool for desgners <a href="https://symu.co/">symu.co</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="assets/js/libs.js"></script>
 <script src="assets/js/main.js"></script>
