--- a/Home-11/index.html
+++ b/Home-11/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>InteractiveAgency</title>
+    <link rel="stylesheet" type="text/css" href="assets/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/slick/slick-theme.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -161,6 +163,76 @@
         </div>
     </div>
 </section>
+<section class="portfolio">
+    <div class="portfolio__slider d-flex">
+        <div class="portfolio__slider__slide">
+            <img src="assets/img/portfolio/drone-zone.png" alt="drone zone">
+            <div class="portfolio__slider__slide__overlay text-center d-flex flex-column align-items-center justify-content-center">
+                <h3 class="portfolio__slider__slide__overlay__title">Drone Zone Template</h3>
+                <p class="portfolio__slider__slide__overlay__subtitle">Aliquam sagittis neque in lectus semper, nec
+                    elementum arcu scelerisque.
+                    Curabitur ullamcorper auctor mauris, placerat fermentum.
+                </p>
+                <a class="main-btn" href="#">Watch more</a>
+            </div>
+        </div>
+        <div class="portfolio__slider__slide">
+            <img src="assets/img/portfolio/neptune.png" alt="neptune">
+            <div class="portfolio__slider__slide__overlay text-center d-flex flex-column align-items-center justify-content-center">
+                <h3 class="portfolio__slider__slide__overlay__title">Neptune Template</h3>
+                <p class="portfolio__slider__slide__overlay__subtitle">Aliquam sagittis neque in lectus semper, nec
+                    elementum arcu scelerisque.
+                    Curabitur ullamcorper auctor mauris, placerat fermentum.
+                </p>
+                <a class="main-btn" href="#">Watch more</a>
+            </div>
+        </div>
+        <div class="portfolio__slider__slide">
+            <img src="assets/img/portfolio/fit-app.png" alt="fit app">
+            <div class="portfolio__slider__slide__overlay text-center d-flex flex-column align-items-center justify-content-center">
+                <h3 class="portfolio__slider__slide__overlay__title">Fit App Template</h3>
+                <p class="portfolio__slider__slide__overlay__subtitle">Aliquam sagittis neque in lectus semper, nec
+                    elementum arcu scelerisque.
+                    Curabitur ullamcorper auctor mauris, placerat fermentum.
+                </p>
+                <a class="main-btn" href="#">Watch more</a>
+            </div>
+        </div>
+        <div class="portfolio__slider__slide">
+            <img src="assets/img/portfolio/drone-zone.png" alt="drone zone">
+            <div class="portfolio__slider__slide__overlay text-center d-flex flex-column align-items-center justify-content-center">
+                <h3 class="portfolio__slider__slide__overlay__title">Drone Zone Template</h3>
+                <p class="portfolio__slider__slide__overlay__subtitle">Aliquam sagittis neque in lectus semper, nec
+                    elementum arcu scelerisque.
+                    Curabitur ullamcorper auctor mauris, placerat fermentum.
+                </p>
+                <a class="main-btn" href="#">Watch more</a>
+            </div>
+        </div>
+        <div class="portfolio__slider__slide">
+            <img src="assets/img/portfolio/neptune.png" alt="neptune">
+            <div class="portfolio__slider__slide__overlay text-center d-flex flex-column align-items-center justify-content-center">
+                <h3 class="portfolio__slider__slide__overlay__title">Neptune Template</h3>
+                <p class="portfolio__slider__slide__overlay__subtitle">Aliquam sagittis neque in lectus semper, nec
+                    elementum arcu scelerisque.
+                    Curabitur ullamcorper auctor mauris, placerat fermentum.
+                </p>
+                <a class="main-btn" href="#">Watch more</a>
+            </div>
+        </div>
+        <div class="portfolio__slider__slide">
+            <img src="assets/img/portfolio/fit-app.png" alt="fit app">
+            <div class="portfolio__slider__slide__overlay text-center d-flex flex-column align-items-center justify-content-center">
+                <h3 class="portfolio__slider__slide__overlay__title">Fit App Template</h3>
+                <p class="portfolio__slider__slide__overlay__subtitle">Aliquam sagittis neque in lectus semper, nec
+                    elementum arcu scelerisque.
+                    Curabitur ullamcorper auctor mauris, placerat fermentum.
+                </p>
+                <a class="main-btn" href="#">Watch more</a>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="about">
     <div class="container">
         <div class="section-header text-center">
@@ -221,6 +293,40 @@
     </div>
 </footer>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- slick-slider -->
+<script type="text/javascript" src="assets/slick/slick.min.js"></script>
+<script>
+  $('.portfolio__slider').slick({
+    dots: false,
+    infinite: true,
+    speed: 500,
+    slidesToShow: 3,
+    slidesToScroll: 1,
+    prevArrow: '<button class="portfolio__slider__btn portfolio__slider__prev-btn"><div class="left-arrow"></div></button>',
+    nextArrow: '<button class="portfolio__slider__btn portfolio__slider__next-btn"><div class="right-arrow"></div></button>',
+    responsive: [
+      {
+        breakpoint: 991,
+        settings: {
+          slidesToShow: 2,
+          prevArrow: '<button class="portfolio__slider__btn portfolio__slider__prev-btn"><div class="left-arrow"></div></button>',
+          nextArrow: '<button class="portfolio__slider__btn portfolio__slider__next-btn"><div class="right-arrow"></div></button>',
+          slidesToScroll: 1
+        }
+      },
+      {
+        breakpoint: 640,
+        settings: {
+          slidesToShow: 1,
+          slidesToScroll: 1,
+          prevArrow: '<button class="portfolio__slider__btn portfolio__slider__prev-btn"><div class="left-arrow"></div></button>',
+          nextArrow: '<button class="portfolio__slider__btn portfolio__slider__next-btn"><div class="right-arrow"></div></button>'
+        }
+      }
+    ]
+  })
+</script>
 <script src="assets/js/libs.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
