--- a/Home-13/index.html
+++ b/Home-13/index.html
@@ -1,13 +1,22 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ToDo List</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+<div class="container wrapper">
+    <h1>Tasks</h1>
+    <form class="add-items">
+        <input type="text" class="form-control" id="todo-list-item" placeholder="What do you need to do today?">
+        <button class="add" type="submit">Add to List</button>
+    </form>
+    <ul id="list-items"></ul>
+</div>
 
 <script src="assets/js/libs.js"></script>
 <script src="assets/js/main.js"></script>
-</body>
-</html>
